# starter-kit-dj

./: .env.example  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/apps/users/: urls.py
{{cookiecutter.project_name}}/apps/users/models/: user_model.py
{{cookiecutter.project_name}}/apps/users/serializers/: user_serializer.py
{{cookiecutter.project_name}}/apps/users/views/: user_view.py
{{cookiecutter.project_name}}/config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/: .env.example  README.md  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/apps/users/: urls.py
{{cookiecutter.project_slug}}/apps/users/models/: user_model.py
{{cookiecutter.project_slug}}/apps/users/serializers/: user_serializer.py
{{cookiecutter.project_slug}}/apps/users/tests/: test_user_views.py
{{cookiecutter.project_slug}}/apps/users/views/: google_oauth_view.py  user_view.py
{{cookiecutter.project_slug}}/config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/: settings.py
